<resources>
    <string name="app_name" translatable="false">Share Moments</string>
    <string name="desc_camera_image">Camera image</string>
    <string name="desc_photo_in_the_list">Photo in the list</string>
    <string name="lb_new_photo">New photo</string>
    <string name="desc_selected_photo">Selected photo</string>
    <string name="lb_title">Title:</string>
    <string name="lb_photo_date">Date:</string>
    <string name="lb_size">Size:</string>
    <string name="lb_height">Height:</string>
    <string name="lb_format">Format:</string>
    <string name="lb_take_photo">Take photo</string>
    <string name="lb_save">Save</string>
    <string name="desc_take_photo_button">Take photo button</string>
    <string name="desc_button_save_photo">Button save photo</string>
    <string name="lb_width">Width:</string>
    <string name="lb_sharePhoto">Share photo</string>
    <string name="lb_no_photo_found">No photo found</string>
    <string name="lbl_error_loading">Error loading photos</string>
    <string name="msg_photo_saved">Photo saved successfully</string>
    <string name="msg_error_saving_photo">Error saving photo</string>
    <string name="msg_success_update">Photo updated successfully</string>
    <string name="msg_error_update">Error updating photo</string>
    <string name="msg_no_camera">Camera is not available</string>
    <string name="lbl_location">Location:</string>
    <string name="lbl_unknown">Unknown</string>
    <string name="msg_request_perm_rationale">Location access is needed to show where the photo was taken.</string>
    <string name="msg_location_unavailable">The photo\'s location won\'t be available.</string>
</resources>