<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/photoDetailsCoordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.photoDetails.PhotoDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPhotoDetails"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/primaryColor"
                android:contentDescription="@string/desc_selected_photo"
                android:src="@drawable/ic_image" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/grp_details_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/ivPhotoDetails">


                <RatingBar
                    android:id="@+id/rbPhotoDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:stepSize="1.0"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvPhotoTitle"
                    style="@style/CustomLabelBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/lb_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rbPhotoDetails" />

                <EditText
                    android:id="@+id/etPhotoTitle"
                    style="@style/custom_edittext"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvPhotoTitle"
                    tools:text="selfie" />

                <TextView
                    android:id="@+id/lblPhotoDate"
                    style="@style/CustomLabelBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/lb_photo_date"
                    app:layout_constraintStart_toStartOf="@+id/lbLocation"
                    app:layout_constraintTop_toBottomOf="@+id/lbLocation" />

                <TextView
                    android:id="@+id/tvPhotoDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lblPhotoDate"
                    app:layout_constraintStart_toEndOf="@+id/lblPhotoDate"
                    app:layout_constraintTop_toTopOf="@+id/lblPhotoDate"
                    tools:text="10/02/20 3:26 PM" />

                <TextView
                    android:id="@+id/lb_photoSize"
                    style="@style/CustomLabelBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/lb_size"
                    app:layout_constraintEnd_toStartOf="@+id/tvPhotoSize"
                    app:layout_constraintTop_toTopOf="@+id/lb_photo_width" />

                <TextView
                    android:id="@+id/tvPhotoSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/tvPhotoFormat"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhotoFormat"
                    tools:text="3.10 MB" />

                <TextView
                    android:id="@+id/lb_photo_height"
                    style="@style/CustomLabelBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/lb_height"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/lblPhotoDate"
                    app:layout_constraintTop_toBottomOf="@+id/lblPhotoDate" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="78"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/lb_photo_height"
                    app:layout_constraintTop_toTopOf="@+id/lb_photo_height" />

                <TextView
                    android:id="@+id/lbFormat"
                    style="@style/CustomLabelBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/lb_format"
                    app:layout_constraintEnd_toStartOf="@+id/tvPhotoFormat"
                    app:layout_constraintTop_toTopOf="@+id/tvPhotoDate" />

                <TextView
                    android:id="@+id/tvPhotoFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="JPEG"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/lbFormat" />

                <TextView
                    android:id="@+id/lb_photo_width"
                    style="@style/CustomLabelBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/lb_width"
                    app:layout_constraintStart_toEndOf="@+id/tvHeight"
                    app:layout_constraintTop_toTopOf="@+id/lb_photo_height" />

                <TextView
                    android:id="@+id/tvWidth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="80"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/lb_photo_width"
                    app:layout_constraintTop_toTopOf="@+id/lb_photo_width" />

                <TextView
                    android:id="@+id/lbLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    style="@style/CustomLabelBold"
                    android:text="@string/lbl_location"
                    app:layout_constraintStart_toStartOf="@+id/tvPhotoTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhotoTitle" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etPhotoTitle"
                    android:text="@string/lbl_unknown" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="8dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabTakePhoto"
                    style="@style/Widget.Design.FloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/primaryColor"
                    android:clickable="true"
                    android:contentDescription="@string/desc_take_photo_button"
                    android:focusable="true"
                    app:layout_constraintEnd_toStartOf="@+id/fabSavePhoto"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_camera_app" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabSavePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/primaryColor"
                    android:clickable="true"
                    android:contentDescription="@string/desc_button_save_photo"
                    android:focusable="true"
                    app:layout_constraintEnd_toStartOf="@+id/fabSharePhoto"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_save" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabSharePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/primaryColor"
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_share"
                    android:focusable="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/include_loading" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>